k8s/add-ons/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: argo.time.in10minutes.dev
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argo.time.in10minutes.dev
    secretName: argo-time-in10minutes-dev-tls
  rules:
  - host: argo.time.in10minutes.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port:
              number: 80
